fix: table font color in dark mode

--- a/src/styles/ghost/_ghost_screen.scss
+++ b/src/styles/ghost/_ghost_screen.scss
@@ -2132,3 +2132,9 @@ production stylesheet in assets/built/screen.css
 
    */
 }
+
+
+.dark #ghost_content table span {
+    color: #e2e8f0 !important;
+}
+  
